--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 #top-banner {
-  color : rgb(197,72,228);
-    font-size: 50px;
+  color : rgb(234, 98, 5);
+    font-size: 30px;
 
-  background-color: rgba(250, 124, 25);
+  background-color: rgba(231, 151, 249);
   overflow: auto;
   text-align: center;
 }
